add google search console

--- a/_posts/2023-08-22-seq2seq.md
+++ b/_posts/2023-08-22-seq2seq.md
@@ -6,7 +6,7 @@ tags: [NLP, seq2seq]
 categories: papers
 ---
 ## Introduction
-본 논문의 도입부에서는 DNN의 장점과 한계를 말해주고 있습니다. 다양한 task에서 좋은 성과를 보이는 DNN이지만, input과 output vector의 크기가 고정된 경우에 대해서만 작동이 가능했습니다. 하지만 QA, MT와 같은 대부분의 real-word task에서는 input과 output의 크기를 미리 알기 어렵습니다. 따라서 이 논문에서는 이를 해결하기 위해 general한 sequence to sequence를 mapping하는 모델을 제시합니다. 
+본 논문의 도입부에서는 DNN의 장점과 한계를 말해주고 있습니다. 다양한 task에서 좋은 성과를 보이는 DNN이지만, input과 output vector의 크기가 고정된 경우에 대해서만 작동이 가능했습니다. 하지만 QA(Question Answering), MT(Machine Translation)와 같은 대부분의 real-word task에서는 input과 output의 크기를 미리 알기 어렵습니다. 따라서 이 논문에서는 이를 해결하기 위해 general한 sequence to sequence를 mapping하는 모델을 제시합니다. 
 
 모델은 2개의 LSTM으로 이루어진 구조를 갖습니다. 첫 번째 LSTM은 주어진 input 벡터를 고정된 크기의 벡터로 바꿔줍니다. 두 번째 LSTM은 첫 번째 LSTM의 마지막 hidden layer에서 나온 값을 input으로 받은 뒤  output을 뽑아내는 역할을 합니다. seq2seq 구조에서 input으로 넣어주는 부분을 source sentence, output으로 나오는 값을 target sentence라고 합니다. source sentence의 순서를 뒤집어서 모델에게 주는 방식이 seq2seq에서 문제시되는 long-term dependency를 잘 해결한다고 합니다.
 ## The Model
